@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

package controllers #DDDDDD {
() ViewController
}

package models #DDDDDD {
() Board
() ChanceField
}

package services {

class FileImporter {
    -reader: BufferedReader

    +readAllLinesInFile(filename : String) : String[]
    -getLinesInFile(filename : String) : int
}
class FieldsDataReader {
    -rawStringsData: String[]
    -fieldNamesArray: String[]
    -fieldTypeArray: String[]
    -streetColorsArray: String[]
    -fieldPriceArray: int[]
    -housePriceArray: int[]
    -rentArrayArray: int[][]
    -rentLevels: int

    -readData() : void
}
class FieldsCreator {
    +createFields() : Field[]
}
class ChanceCardsDataReader {
    -rawStringsData : String[]
    -numArray: int[][]
    -fieldNameWithinText: String[]

    -readData() : void
    -readFieldNames() : void

}
class ChanceCardsCreator {
    +createChanceCardsDeck() : ChanceCard[]
}

class BuildSellBuildingsHandler {
    -fields: Field[]

    +currentPlayerBuildingDecision(playerNum : int) : void
    +playerMustSellBuildings(playerNum : int, playerObject : Player) : void
    -buildHouse() : void
    -sellHouse(playerNum : int) : void
    -buildHotel() : void
    -sellHotel(playerNum : int) : void
    -currentPlayerMayBuyHouses() : boolean
    -currentPlayerMayBuyHousesOnField(fieldArrayNum : int) : boolean
    -currentPlayerMaySellHouses(playerNum : int) : boolean
    -currentPlayerMaySellHouseOnField(fieldArrayNum : int, playerNum : int) : boolean
    -currentPlayerMayBuyHotels() : boolean
    -currentPlayerMayBuyHotelOnField(fieldArrayNum : int) : boolean
    -currentPlayerMaySellHotels(playerNum : int) : boolean
    -currentPlayerMaySellHotelOnField(fieldArrayNum : int, playerNum : int) : boolean
    -getStreetColorsEligibleForBuildingHouse() : String[]
    -getStreetColorsEligibleForBuildingHotel() : String[]
    -getStreetColorsEligibleForSellingHouse(playerNum : int) : String[]
    -getStreetColorsEligibleForSellingHotel(playerNum : int) : String[]
}

class GUIBoardCreator {
    -guiFields: GUI_Field[]
    -guiStreets: GUI_Street[]
    -board: Board
    -fieldsDataReader: FieldsDataReader
    -fieldPrice: int[]
    -rentAmount: int[][]
    -housePrice: int[]
    -fileImporter: FileImporter
    -takeTurnMessages: String[]
    -fieldDescriptions: String[]

    +setUpAndFormatGUIBoard() : void
    -formatStreets() : void
    -setupBreweryFields() : void
    -formatShippingFields() : void
    -setupSTART() : void
    -setupRefuge() : void
    -setupTaxFields() : void
    -setupJailFields() : void
}

}

ChanceField *-- ChanceCardsCreator
ViewController *-- GUIBoardCreator
Board *---- FieldsCreator
Board *- BuildSellBuildingsHandler
FieldsDataReader --> FileImporter
ChanceCardsDataReader --> FileImporter
FieldsCreator --> FieldsDataReader
ChanceCardsCreator --> ChanceCardsDataReader

@enduml